--- a/classroom/src/styles.css
+++ b/classroom/src/styles.css
@@ -1,12 +1,13 @@
 /* You can add global styles to this file, and also import other style files */
-@import url('https://fonts.googleapis.com/icon?family=Material+Icons');
+/*@import url('https://fonts.googleapis.com/icon?family=Material+Icons');*/
 
 /* easy-ui */
 @import '~ng-easyui/themes/material/easyui.css';
 @import '~ng-easyui/themes/angular.css';
 @import '~ng-easyui/themes/icon.css';
 
-
+/* angular material */
+@import "~@angular/material/prebuilt-themes/indigo-pink.css";
 body {
   /*box-sizing: border-box;*/
   margin: 0;
