--- a/classroom/src/app/scatterplot/scatterplot.component.html
+++ b/classroom/src/app/scatterplot/scatterplot.component.html
@@ -1,9 +1,8 @@
 <app-nav></app-nav>
-<!--<ngx-spinner type="ball-pulse"><span style="font-size: 20px; color: white">Loading...</span></ngx-spinner>-->
-<div *ngIf="corpus" class="container">
-  <!--<h2>\{\{corpus.course\}\} - \{\{corpus.assignment\}\} Scatter Plot</h2>-->
-  <h2>Scatter Plot</h2>
-  <div *ngIf="categories" class="scatter_container">
+<mat-card *ngIf="corpus" class="container">
+  <mat-card-title>Scatter Plot</mat-card-title>
+  <mat-card-subtitle>Compares the frequecies of two patterns where each point represents a document.</mat-card-subtitle>
+  <mat-card-content *ngIf="categories" class="scatter_container">
     <aside class="aside aside-y">
       <label for="select_y">Y Axis:</label>
       <select id="select_y" [(ngModel)]="y_axis" (ngModelChange)="on_select($event)" ngOptions>
@@ -19,5 +18,5 @@
     <article class="main">
       <app-scatterplot-graph [points]="data"></app-scatterplot-graph>
     </article>
-  </div>
-</div>
+  </mat-card-content>
+</mat-card>
