--- a/classroom/src/app/rank/rank.component.css
+++ b/classroom/src/app/rank/rank.component.css
@@ -1,3 +1,13 @@
+.container {
+  margin: 5px;
+}
+.select_category_box {
+  margin-bottom: 18px;
+}
+.select_category_label {
+  margin-bottom: 5px;
+  margin-right: 1ch;
+}
 .rank_container {
   margin-left: 20px;
   margin-right: 20px;
