--- a/classroom/src/app/report/report.component.css
+++ b/classroom/src/app/report/report.component.css
@@ -1,4 +1,8 @@
 .container {
-  margin-left: 20px;
-  margin-right: 20px;
+  margin: 5px;
+}
+
+.edit_textarea {
+  width: 100%;
+  padding: 2em;
 }
