--- a/classroom/src/app/app.component.css
+++ b/classroom/src/app/app.component.css
@@ -13,20 +13,9 @@
   justify-content: space-between;
   align-items: center;
 }
-.title-banner > * {
-  margin-left: 15px;
-  margin-right: 15px;
+.spacer {
+  flex: 1 1 auto;
 }
 .pointer {
   cursor: pointer;
-}
-span.spinner_text {
-  font-size: 20px;
-  color: white;
-}
-h1.dialog {
-  text-align: center;
-}
-p.dialog {
-  padding: 10px;
 }
