Attempts to fix headless testing.

--- a/classroom/src/app/app.component.html
+++ b/classroom/src/app/app.component.html
@@ -1,5 +1,5 @@
 <!-- Title Banner -->
-<mat-toolbar color="primary">
+<mat-toolbar color="warn"><!-- color="primary" -->
   <span>{{title}}</span><span class="spacer"></span>
   <button mat-icon-button (click)="openAbout()"><mat-icon>info</mat-icon></button>
 </mat-toolbar>
