--- a/classroom/src/app/grouping/grouping.component.html
+++ b/classroom/src/app/grouping/grouping.component.html
@@ -4,7 +4,7 @@
   <mat-card-subtitle>Use this tool to automatically assign students to groups.</mat-card-subtitle>
   <mat-card-content>
     <mat-drawer-container style="min-height: 200px;">
-      <mat-drawer mode="side" opened class="options">
+      <mat-drawer mode="side" opened disableClose class="options">
         <h4>Group Parameters:</h4>
         <div>
           <mat-form-field>
