--- a/classroom/src/app/grouping/grouping.component.css
+++ b/classroom/src/app/grouping/grouping.component.css
@@ -7,6 +7,10 @@
 .options {
   padding-right: 1em;
 }
+.go_button {
+  margin: 0px auto 8px;
+  display: block;
+}
 
 .groups_content {
   padding-left: 1em;
@@ -21,13 +25,61 @@
 .group {
   display: flex;
   flex-flow: row;
+  align-items: center;
   justify-content: flex-start;
   border-bottom: 1px solid grey;
+  min-height: 3em;
 }
 
 .group_label {
   width: 10em;
 }
+.group_list {
+  display: flex;
+  flex-flow: row;
+  align-items: center;
+  justify-content: flex-start;
+  width: 100%;
+  height: 100%;
+  margin-top: 3px;
+  padding-top: 3px;
+  flex-wrap: wrap;
+}
 .group_member {
-  width: 38em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  overflow: visible;
+  white-space: nowrap;
+  border: solid 1px grey;
+  border-radius: 1em;
+  background: lightgrey;
+  margin-left: 4px;
+  margin-right: 4px;
+  padding-top: 3px;
+  padding-bottom: 3px;
+  padding-left: 1em;
+  padding-right: 1em;
+}
+
+.cdk-drag {
+  cursor: move;
+}
+.cdk-drag-preview {
+  box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2),
+              0 8px 10px 1px rgba(0, 0, 0, 0.14),
+              0 3px 14px 2px rgba(0, 0, 0, 0.12);
+}
+
+.cdk-drag-placeholder {
+  opacity: 0;
+}
+
+.cdk-drag-animating {
+  transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
+}
+
+.group_list.cdk-drop-list-dragging .group_member:not(.cdk-drag-placeholder) {
+  transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
 }
