--- a/classroom/src/app/scatterplot/scatterplot.component.css
+++ b/classroom/src/app/scatterplot/scatterplot.component.css
@@ -5,12 +5,16 @@
 }
 .scatter_container {
   display: flex;
-  flex-flow: row wrap;
+  flex-direction: column;
+  padding-left: 10px;
+  padding-right: 10px;
 }
-.scatter_container > * {
+.axis_selection {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+}
+.axis_select {
   padding: 10px;
 }
-/*.main { flex: 3 0px; }*/
-.aside-y { order: 1; align-self: center; }
-.main { order: 2; }
-.aside-x { order: 3; width: 100%; margin: auto; text-align: center; }
